1.6/_sources/modules/generated/sklearn.linear_model.LogisticRegression.rst.txt
LogisticRegression
==================

.. currentmodule:: sklearn.linear_model

.. autoclass:: LogisticRegression
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.linear_model.LogisticRegression sklearn.linear_model.LogisticRegression.__init__ sklearn.linear_model.LogisticRegression.decision_function sklearn.linear_model.LogisticRegression.densify sklearn.linear_model.LogisticRegression.fit sklearn.linear_model.LogisticRegression.get_metadata_routing sklearn.linear_model.LogisticRegression.get_params sklearn.linear_model.LogisticRegression.predict sklearn.linear_model.LogisticRegression.predict_log_proba sklearn.linear_model.LogisticRegression.predict_proba sklearn.linear_model.LogisticRegression.score sklearn.linear_model.LogisticRegression.set_fit_request sklearn.linear_model.LogisticRegression.set_params sklearn.linear_model.LogisticRegression.set_score_request sklearn.linear_model.LogisticRegression.sparsify 
   :add-heading: Gallery examples
   :heading-level: -