1.7/_sources/modules/generated/sklearn.linear_model.LogisticRegression.rst.txt
LogisticRegression
==================

.. currentmodule:: sklearn.linear_model

.. autoclass:: LogisticRegression
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.linear_model.LogisticRegression sklearn.linear_model.LogisticRegression.__delattr__ sklearn.linear_model.LogisticRegression.__dir__ sklearn.linear_model.LogisticRegression.__eq__ sklearn.linear_model.LogisticRegression.__format__ sklearn.linear_model.LogisticRegression.__ge__ sklearn.linear_model.LogisticRegression.__getattribute__ sklearn.linear_model.LogisticRegression.__getstate__ sklearn.linear_model.LogisticRegression.__gt__ sklearn.linear_model.LogisticRegression.__hash__ sklearn.linear_model.LogisticRegression.__init__ sklearn.linear_model.LogisticRegression.__init_subclass__ sklearn.linear_model.LogisticRegression.__le__ sklearn.linear_model.LogisticRegression.__lt__ sklearn.linear_model.LogisticRegression.__ne__ sklearn.linear_model.LogisticRegression.__new__ sklearn.linear_model.LogisticRegression.__reduce__ sklearn.linear_model.LogisticRegression.__reduce_ex__ sklearn.linear_model.LogisticRegression.__repr__ sklearn.linear_model.LogisticRegression.__setattr__ sklearn.linear_model.LogisticRegression.__setstate__ sklearn.linear_model.LogisticRegression.__sizeof__ sklearn.linear_model.LogisticRegression.__sklearn_clone__ sklearn.linear_model.LogisticRegression.__sklearn_tags__ sklearn.linear_model.LogisticRegression.__str__ sklearn.linear_model.LogisticRegression.__subclasshook__ sklearn.linear_model.LogisticRegression._build_request_for_signature sklearn.linear_model.LogisticRegression._get_default_requests sklearn.linear_model.LogisticRegression._get_doc_link sklearn.linear_model.LogisticRegression._get_metadata_request sklearn.linear_model.LogisticRegression._get_param_names sklearn.linear_model.LogisticRegression._get_params_html sklearn.linear_model.LogisticRegression._html_repr sklearn.linear_model.LogisticRegression._predict_proba_lr sklearn.linear_model.LogisticRegression._repr_html_inner sklearn.linear_model.LogisticRegression._repr_mimebundle_ sklearn.linear_model.LogisticRegression._validate_params sklearn.linear_model.LogisticRegression.decision_function sklearn.linear_model.LogisticRegression.densify sklearn.linear_model.LogisticRegression.fit sklearn.linear_model.LogisticRegression.get_metadata_routing sklearn.linear_model.LogisticRegression.get_params sklearn.linear_model.LogisticRegression.predict sklearn.linear_model.LogisticRegression.predict_log_proba sklearn.linear_model.LogisticRegression.predict_proba sklearn.linear_model.LogisticRegression.score sklearn.linear_model.LogisticRegression.set_fit_request sklearn.linear_model.LogisticRegression.set_params sklearn.linear_model.LogisticRegression.set_score_request sklearn.linear_model.LogisticRegression.sparsify 
   :add-heading: Gallery examples
   :heading-level: -